--- a/readme
+++ b/readme
@@ -13,7 +13,7 @@ To set up the project environment, follow these steps:
 
 ## How to run
 pipenv run python main.py --url <incident_summary_url> --db <database_path>
-python assignment0/main.py --url https://www.normanok.gov/sites/default/files/documents/2024-01/2024-01-01_daily_incident_summary.pdf --db your_db
+pipenv run python assignment0/main.py --incidents "https://www.normanok.gov/sites/default/files/documents/2024-01/2024-01-01_daily_incident_summary.pdf" --db db_path
 
 ## Functions
 ### main.py
